Added removal of a character from the list of friends and getting a list of friends
